src/assets/scss/main/_global.scss
// @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700;800;900&display=swap');
// @import url('https://fonts.googleapis.com/css2?family=Amiri+Quran&display=swap');

:root {
  --body-font: "Inter", sans-serif;
  --body-color: #f9fbfc;
  --primary-color: #1a0c02;
  --secondary-color: #f3f3f3;
  --border-color: #2b3b58;
  --bs-border-color: #2b3b58;
  --border-1st-color: #e2e2e2;
  --border-2nd-color: #dbdbdb;
  --highlight-color: #ff4949;
  --highlight-2nd-color: #ffd3c6;
  --icon-color: #ffffff;
  --icon-2nd-color: #d9d9d9;
  --heading-1st-color: #444444;
  --para-1st-color: #888888;
  --para-2nd-color: #222222;
  --para-3rd-color: #888888;
  --para-4th-color: #00a469;
  --para-5th-color: #666666;
  --para-6th-color: #666666;
  --box-1st-color: #f3f3f3;
  --box-2nd-color: #f9fbfc;
  --btn-1st-color: #dddddd;
  --btn-2nd-color: #bdf8db;
  --section-1st-color: #ffffff;
  --box-shadow: 0px 4px 26px rgba(222, 222, 222, 0.25);
  --box-2nd-shadow: 0px 4px 26px rgba(189, 189, 189, 0.25);
  --hero-section-bg: #f9fbfcc9;
  --font-icon-color: #1a0c02;
  --scroll-color: #1a0c02;
  --post-border-color: #2b3b58;
}

.dark-ui {
  --body-color: #000000;
  --primary-color: #db8c3d;
  --secondary-color: #f3f3f3;
  --border-color: #192734;
  --bs-border-color: #192734;
  --border-1st-color: #192734;
  --border-2nd-color: #192734;
  --icon-color: #888888;
  --icon-alt-color: #a6acb6;
  --heading-1st-color: #ffffff;
  --para-1st-color: #a6acb6;
  --para-2nd-color: #ffffff;
  --para-3rd-color: #ffffff;
  --para-4th-color: #ffffff;
  --para-5th-color: #ffffff;
  --para-6th-color: #a6acb6;
  --box-1st-color: #283846;
  --box-2nd-color: #192734;
  --btn-1st-color: #1d9bf0;
  --btn-2nd-color: #185e54;
  --section-1st-color: #18222b;
  --box-shadow: 0px 4px 26px rgba(66, 66, 66, 0.25);
  --box-2nd-shadow: 0px 4px 26px rgba(66, 66, 66, 0.25);
  --hero-section-bg: #000428bf;
  --font-icon-color: #ffffff;
  --scroll-color: #F9B572;
  --post-border-color: #f3f3f3;
}
.cursor {
  cursor: pointer;
}
.collapsing {
  transition: 0.3s;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--body-font);
  background-color: var(--body-color) !important;
  font-size: 18px;
  line-height: 30px;
  padding: 0;
  margin: 0;
  font-weight: 400;
  overflow-x: hidden;
}

section,
footer {
  overflow-x: hidden;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  padding: 0;
  margin: 0;
}

h1,
h1 > a,
h2,
h2 > a,
h3,
h3 > a,
h4,
h4 > a,
h5,
h5 > a,
h6,
h6 > a,
.heading,
label {
  font-family: var(--body-font) !important;
  color: var(--heading-1st-color) !important;
  font-weight: 600;
  display: block;
  text-transform: capitalize;
  transition: all 0.3s;
  span {
    font-size: inherit;
    font-family: inherit;
    color: inherit;
    line-height: inherit;
    font-weight: inherit;
  }
}

h1 > a:hover,
h2 > a:hover,
h3 > a:hover,
h4 > a:hover,
h5 > a:hover,
h6 > a:hover {
  color: var(--heading-1st-color);
}

a {
  display: inline-block;
}

a {
  text-decoration: none !important;
  outline: none;
  transition: 0.3s;

  &:hover {
    text-decoration: none;
    outline: none;
    color: var(--heading-1st-color);
    i,
    span {
      color: var(--primary-color);
    }
  }
}

img {
  max-width: 100%;
  height: auto;
}

.max-un {
  max-width: unset;
}

.d-rtl {
  direction: rtl;
}

ul,
ol {
  padding: 0;
  margin: 0;
  list-style: none;
}

button {
  border: none;
  cursor: pointer;
  padding: 0;
  color: var(--para-1st-color);
  background-color: transparent;
}

.link {
  color: #0085ff;
}

.single-input {
  margin-bottom: 16px;
}

input,
textarea {
  padding: 15px 20px;
  color: var(--para-1st-color);
  width: 100%;
  font-family: var(--body-font);
  outline-color: transparent;
  border-radius: 10px;
  font-size: 16px;
  background-color: var(--box-1st-color);
  border: 1px solid transparent;
  &::placeholder {
    opacity: 0.5;
    color: #a6acd1;
  }
  &:focus {
    outline: none;
    box-shadow: none;
    border: 1px solid var(--primary-color);
  }
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

input[type="checkbox"] {
  width: initial;
  height: initial;
}

select {
  padding: 10px 20px;
  border: none;
  cursor: pointer;
  outline: none;
}

span {
  display: inline-block;
}

.table thead th,
.table td,
.table th {
  border: none;
}

.b-none {
  border: none !important;
}

.ovf-unset {
  overflow-x: unset !important;
}

iframe {
  border: 0;
  width: 100%;
}

.shadow-none {
  -webkit-box-shadow: none;
  box-shadow: none;
}

h1,
h1 > a {
  font-size: 76px;
  line-height: 98.8px;
  margin-top: -20px;
}

h2,
h2 > a {
  font-size: 57px;
  line-height: 74.1px;
  margin-top: -14px;
}

h3,
h3 > a {
  font-size: 43px;
  line-height: 55.9px;
  margin-top: -10px;
}

h4,
h4 > a {
  font-size: 32px;
  line-height: 41.6px;
  margin-top: -8px;
}

h5,
h5 > a {
  font-size: 24px;
  line-height: 31.2px;
  margin-top: -6px;
}

h6,
h6 > a {
  font-size: 18px;
  line-height: 23.4px;
  margin-top: -4px;
}

h6,
.h6,
h5,
.h5,
h4,
.h4,
h3,
.h3,
h2,
.h2,
h1,
.h1 {
  color: var(--para-2nd-color) !important;
}

table thead tr th {
  font-size: 18px;
  line-height: 30px;
}

a,
p,
span,
li,
option {
  margin: 0;
  font-family: var(--body-font) !important;
  color: var(--para-2nd-color);
  font-size: 16px;
  font-weight: 300;
  overflow-wrap: anywhere;
}

fa-icon svg path {
  fill: var(--font-icon-color);
  opacity: 0.9;
}

li {
  font-size: inherit;
}

.d-center {
  display: flex;
  justify-content: center;
  align-items: center;
}
/* ... */

